package com.nashss.se.htmvault.activity.results;

public class AddDeviceResult {
}
