package com.nashss.se.htmvault.models;

public class DeviceModel {
}
